# weh-rs

./: Cargo.toml  README.md  check_wm.sh
src/: bin.rs
src/lib/: check_feh.rs  lib.rs
src/lib/background/: mod.rs
src/lib/check_sys_info/: check_distro.rs  check_os.rs  check_wm.rs  distro.rs  mod.rs
src/lib/cli/: interface.rs
src/lib/download/: mod.rs
src/lib/helper/: dirs.rs
