[package]
name = "weh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "weh"
path = "src/bin.rs"

[lib]
name = "weh_lib"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.17", features = ["derive"] }
directories = "4.0.1"
reqwest = "0.11.10"
sys-info = "0.9.1"
tokio = { version = "1.18.0", features = ["full"] }

